Set a local install prefix when building Arrow (#5)
If this is not set, Arrow will install headers into system directories
which would be undesirable for a build system.

--- a/flight_sql/CMakeLists.txt
+++ b/flight_sql/CMakeLists.txt
@@ -68,6 +68,7 @@ if (MSVC)
     -DARROW_BUILD_TESTS=OFF
     -DARROW_DEPENDENCY_SOURCE=VCPKG
     -DVCPKG_TARGET_TRIPLET=${VCPKG_TARGET_TRIPLET}
+    -DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR}/ApacheArrow-prefix/src/ApacheArrow-install
     -DVCPKG_MANIFEST_MODE=${VCPKG_MANIFEST_MODE}
     -DCMAKE_DEPENDS_USE_COMPILER=FALSE
     -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
@@ -88,6 +89,7 @@ elseif(APPLE)
           -DVCPKG_TARGET_TRIPLET=${VCPKG_TARGET_TRIPLET}
           -DVCPKG_MANIFEST_MODE=OFF
           -DCMAKE_DEPENDS_USE_COMPILER=FALSE
+          -DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR}/ApacheArrow-prefix/src/ApacheArrow-install
           -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
           )
   if (DEFINED CMAKE_TOOLCHAIN_FILE)
